--- a/java/pom.xml
+++ b/java/pom.xml
@@ -20,7 +20,21 @@
     </properties>
 
     <build>
-        <defaultGoal>compile</defaultGoal>
+        <defaultGoal>exec:java</defaultGoal>
+        <plugins>  
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <configuration>
+                    <executable>java</executable>
+                    <mainClass>sudoku.SudokuSolver</mainClass>
+                 
+                </configuration>
+            </plugin>
+        </plugins>  
     </build>
+
+
+
 
 </project>
